--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/progetto
 
 # Credenziali
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 
 # Driver JDBC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
